# macroeconomic-outlook-dashboard

./: LICENSE  README.md  demo_altair.py  pyproject.toml  requirements.in  requirements.txt
src/macroeconomic_outlook/: __init__.py  dashboard.py
src/macroeconomic_outlook_dashboard/: dashboard.py
